--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Dancing+Script:wght@500&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body class="mat-typography">
