--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="utf-8">
-    <title>Webdelivery</title>
+    <title>Juul Fortal</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
